--- a/Postcard/Base.lproj/Main.storyboard
+++ b/Postcard/Base.lproj/Main.storyboard
@@ -104,6 +104,15 @@
                                     <action selector="sendMailButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gmv-gV-iuW"/>
                                 </connections>
                             </button>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="huq-ff-l5z">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="26" y="185" width="187" height="21"/>
+                                </variation>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <variation key="default">
@@ -113,6 +122,7 @@
                                 <exclude reference="QzM-4A-gVa"/>
                                 <exclude reference="GIF-Rm-9HR"/>
                                 <exclude reference="Sk6-qE-xp4"/>
+                                <exclude reference="huq-ff-l5z"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -122,6 +132,7 @@
                                 <include reference="QzM-4A-gVa"/>
                                 <include reference="GIF-Rm-9HR"/>
                                 <include reference="Sk6-qE-xp4"/>
+                                <include reference="huq-ff-l5z"/>
                             </mask>
                         </variation>
                     </view>
@@ -130,6 +141,7 @@
                         <outlet property="enterNameTextField" destination="Nyu-if-ife" id="SUt-Ch-5x8"/>
                         <outlet property="mailButton" destination="Sk6-qE-xp4" id="CEX-Y6-fso"/>
                         <outlet property="messageLabel" destination="GIF-Rm-9HR" id="EaE-Y1-rbN"/>
+                        <outlet property="nameLabel" destination="huq-ff-l5z" id="ufn-dK-tAO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
